--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "headshot.png"
   name             : "Micah Y. Baum"
   pronouns         : # example: "she/her"  
-  bio              : "PhD Student in Public Policy & Economics"
+  bio              : "PhD Candidate in Public Policy & Economics"
   location         : "Ann Arbor, MI"
   employer         : "University of Michigan"
   uri              : # URL
