--- a/_config.yml
+++ b/_config.yml
@@ -48,7 +48,7 @@ author:
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
   # Social media
-  bluesky          : # "bsky.app" # Replace this with you Bluesky username
+  bluesky          : # @micahybaum.bsky.social
   facebook         : # Username
   flickr           : # Username
   foursquare       : # Username
@@ -65,7 +65,7 @@ author:
   steam            : # Username
   telegram         : # URL
   tumblr           : # Username
-  twitter          : "MicahYBaum"
+  twitter          : # Username
   vine             : # Username
   weibo            : # Username
   wikipedia        : # Username
