--- a/_config.yml
+++ b/_config.yml
@@ -8,9 +8,9 @@
 
 # Basic Site Settings
 locale                   : "en-US"
-title                    : "Micah Y. Baum"
+title                    : "Micah Baum"
 title_separator          : "-"
-name                     : &name "Micah Baum"
+name                     : &name "Micah Y. Baum"
 description              : &description "personal description"
 url                      : https://micah-baum.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
