--- a/_config.yml
+++ b/_config.yml
@@ -113,7 +113,7 @@ atom_feed:
 
 
 # SEO Related
-google_site_verification :
+google_site_verification : "dib7aRzbqLVxK2PAGqIP5twV8Jd7o6XjRrPxe3S43DY"
 bing_site_verification   :
 alexa_site_verification  :
 yandex_site_verification :
